# roam

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build-arch.sh  build-deb.sh  build-rpm.sh  roam.c  roam.conf  roam.config.toml  roam.policy.toml  roam.spec  roam.sudoers
archpkg/: PKGBUILD
crates/roam-broker/: Cargo.toml
crates/roam-broker/src/: lib.rs
crates/roam-cli/: Cargo.toml
crates/roam-cli/src/: main.rs
crates/roam-core/: Cargo.toml
crates/roam-core/src/: config.rs  error.rs  lib.rs  policy.rs  protocol.rs  session.rs  unix.rs
crates/roam-sandbox/: Cargo.toml
crates/roam-sandbox/src/: lib.rs
debian/: changelog  conffiles  control  copyright  postinst  rules
shell/: bashrc  zlogin  zlogout  zprofile  zshenv  zshrc
