[workspace]
members = [
  "crates/roam-broker",
  "crates/roam-cli",
  "crates/roam-core",
  "crates/roam-sandbox",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "2.0.0"

[workspace.dependencies]
glob = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
